--- a/README
+++ b/README
@@ -2,7 +2,7 @@
 Make an IRC client that delivers the best user experience. It should be simple as cake. 
 
 === Ideas ====
-Use: GWT and comet.
+Use: GWT and socket.io.
 
 -> The program focus should be in the channels, not in servers.
 -> Easy channel search with IRC++
@@ -10,3 +10,46 @@ Use: GWT and comet.
 -> Allow users to have avatars, send images, personalize the channel with IRC++
 -> Integrate with facebook, twitter etc.
 -> Automate and integrate with the GUI services like Nickserver, Chanserver, Memoserver and etc.
+
+=== RESEARCH ===
+
+=== OTHER WEB CLIENTS ===
+
+-> Kiwi IRC (Seems to use socket.io)
+https://github.com/prawnsalad/KiwiIRC/
+
+-> Subway
+Very neat web client. Seems to be the closest of what I expect from cakeIRC so far.
+https://github.com/thedjpetersen/subway
+
+-> QWebIRC
+Simple web client. It is the standard for quakenet and freenode.
+http://qwebirc.org/
+
+-> OTHERS webchats (not necessary IRC)
+Kandan, Ballons.io seems to have all features I want, but it doesn't connect to IRC.
+http://www.thedjpetersen.com/blog/comparing_webchat_options/
+
+=== LIBRARY ===
+Main framework: GWT
+
+-> gwt-comet
+GWT SERVER and CLIENT side comet implementation
+https://code.google.com/p/gwt-comet/
+
+-> gwt-ws
+GWT SERVER and CLIENT side WEBSOCKET implementation
+https://code.google.com/p/gwt-ws/
+
+-> node-irc
+SERVER-SIDE Javascript library to IRC protocol.
+https://github.com/martynsmith/node-irc
+
+-> socket.io
+Javascript SERVER and CLIENT-SIDE librry for emulating sockets.
+http://socket.io/
+
+=== DESIGN DECISIONS ===
+-> Use MVC, and create a special layer to the connection (socket etc.)
+
+-> It seems that everybody likes to log all conversations in a channel. This can be done as an optional plugin to our application...
