--- a/README
+++ b/README
@@ -1,5 +1,8 @@
 This project has the purpose to port the Jerklib Java Library (an IRC library) to work with Google WebToolkit.
 
+See all Jerklib documentation in
+http://jerklib.sourceforge.net/
+
 Jerklib_gwt will be used in a gwt irc client, cakeIRC, but can be useful for other projects too.
 
 All the communication is done using raw HTML5 websockets, and it  also includes a simple python websocket proxy server. 
